<resources>
    <string name="app_name">Pick\'em</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="make_pics">Make Pics</string>
    <string name="home_team_image">Home Team Image</string>
    <string name="away_team_image">Away Team Image</string>
    <string name="get_matchups">Get Matchups</string>
    <string name="make_picks">Make Picks</string>
    <string name="monday_night_points">Monday Night Points:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in_text">SIGN-IN</string>
    <string name="login_failed">"Login failed"</string>
    <string name="logout_text">LOGOUT</string>
    <string name="login_description_text">If you do not already have an account click sign-in and you will be prompted to create one!</string>
    <string name="start_pool">Start Pool</string>
    <string name="start_new_pool">Start new pool</string>
    <string name="invite">Invite</string>
    <string name="create_pool">Create Pool</string>
    <string name="textview">TextView</string>
    <string name="invitations">Invitations</string>
    <string name="close">Close</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="active_players">Active Players:</string>
    <string name="select_a_pool">Select a pool</string>
    <string name="invite_players">Invite players</string>
    <string name="create_new_pool">Create New Pool</string>
    <string name="pool_name">Pool name:</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="delete">Delete</string>
    <string name="duplicate">Duplicate</string>
    <string name="send_invitations_to_your_pool">Send invitations to your pool!</string>
    <string name="user_email">User Email:</string>
    <string name="search">Search</string>
    <string name="view_picks">View Picks</string>
    <string name="picks_submitted">Picks Submitted?</string>
    <string name="check_to_show_if_picks_are_submitted">Check to show if picks are submitted</string>
    <string name="view_pool">View Pool</string>
    <string name="submit_your_picks">Submit Your Picks</string>
    <string name="view_saved_picks">View Saved Picks</string>
    <string name="final_points">Final Points:</string>
    <string name="your_picks">Your Picks</string>
    <string name="picks_string">Picks:</string>
    <string name="view_all_picks">View All Picks</string>
    <string name="select_pool">Select Pool</string>
    <string name="delete_pool">Delete Pool</string>
    <string name="delete_change_picks">Delete/Change Picks</string>
    <string name="pools">Pools</string>
    <string name="filter_by_week">Filter by week:</string>
    <string name="submit">Submit</string>
    <string name="enter_week">Enter week:</string>
    <string name="view_this_weeks_picks">View this weeks picks</string>
    <string name="view_upcoming_picks">View upcoming picks</string>
    <string name="view_pool_picks">View Pool Picks</string>
    <string name="team_logo">team logo</string>
    <string name="winner">WINNERS</string>
    <string name="change_week">Change Week</string>
    <string name="see_who_won">See who won</string>
    <string name="your_pool_text">Your Pool</string>
    <string name="attribution"><a href="https://www.freepik.com/vectors/light">Light vector created by vectorpouch - www.freepik.com</a></string>
    <string name="your_pools">Your Pools</string>
    <string name="todo">TODO</string>
    <string name="football_image_to_show_loading">Football image to show loading</string>
    <string name="football_header_graphic">Football header graphic</string>
    <string name="news_item_image">News item image</string>
    <string name="refresh">Refresh</string>
    <string name="espn">ESPN</string>
    <string name="espn_nfl_nation">ESPN (NFL Nation)</string>
    <string name="pro_football_network">Pro Football Network</string>
    <string name="new_york_times_nfl">New York Times NFL</string>
    <!--Night Mode Strings-->
    <string name="pref_key_night" translatable="false">key_night_mode</string>
    <string name="pref_night_title">Night mode</string>
    <string name="pref_night_summary">Select a dark or light theme.</string>
    <string name="pref_night_dialog">Set Night mode</string>
    <string name="pref_night_auto" translatable="false">auto</string>
    <string name="pref_night_on" translatable="false">on</string>
    <string name="pref_night_off" translatable="false">off</string>
    <string name="night_mode_auto">Automatic</string>
    <string name="night_mode_on">Night mode</string>
    <string name="night_mode_off">Day mode</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settings">Settings</string>
    <string name="remember_me">Remember me?</string>
    <string name="sign_up">Sign Up</string>
    <string name="if_you_have_an_account_enter_your_user_name_and_password_then_sign_in_if_not_click_sign_up">If you have an account enter your user name and password then sign in. If not click sign up!</string>
    <string name="user_name">User Name:</string>
    <string name="logout">Logout</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password:</string>
    <string name="these_are_your_pools_click_select_pool_to_view_manage_an_individual_pool_you_can_also_click_delete_to_delete_a_pool_that_you_created_it_or_remove_yourself_from_from_a_pool_you_joined_click_create_new_pool_to_start_a_new_pool">These are your pools, click select poolto view/manage an individual pool. You can also click deleteto delete a pool that you created it, or remove yourself from from a pool you joined. Click create new poolto start a new pool!</string>
    <string name="pref_expert_summary">Select whether or not to see expert picks.</string>
    <string name="pref_expert_title">Show Expert Picks</string>
    <string name="pref_key_expert">key_expert</string>
    <string name="expert_percent_view_tag">v_percent</string>


</resources>