<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/mnu_home_refresh"
        android:icon="@drawable/ic_baseline_refresh_24"
        android:title="@string/refresh"
        app:showAsAction="always" />
    <item
        android:id="@+id/mnu_change_week"
        android:title="@string/change_week" />
    <item
        android:id="@+id/mnu_view_saved_picks"
        android:title="@string/view_saved_picks"
        app:showAsAction="never" />
    <item
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/settings"
        android:id="@+id/home_settings"
        />
    <item
        android:id="@+id/mnu_home_logout"
        android:title="@string/logout" />
</menu>