<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
<variable
    name="poolsViewModel"
    type="com.mattg.pickem.ui.pools.viewModel.PoolViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_marginBottom="50dp"
        tools:context=".ui.home.fragments.PoolManagementFragment">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_pool"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_stadium_graphic"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:contentDescription="@string/todo"
                android:scaleType="fitXY"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/appfield" />

            <TextView
                android:id="@+id/tv_current_pool"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:backgroundTintMode="src_over"
                android:shadowColor="@color/black"
                android:shadowDx="10"
                android:shadowDy="10"
                android:shadowRadius="10"
                android:text="@string/your_pools"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/primaryTextColor"
                android:textSize="36sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/iv_stadium_graphic" />

            <View
                android:id="@+id/title_divider"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/appOffWhite"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_stadium_graphic" />

            <Button
                android:id="@+id/btn_create_pool"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:text="@string/create_new_pool"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv_pools" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_pools"
                android:layout_width="match_parent"
                android:layout_height="275dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_view_pools_info" />

            <TextView
                android:id="@+id/tv_view_pools_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/these_are_your_pools_click_select_pool_to_view_manage_an_individual_pool_you_can_also_click_delete_to_delete_a_pool_that_you_created_it_or_remove_yourself_from_from_a_pool_you_joined_click_create_new_pool_to_start_a_new_pool"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_stadium_graphic" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>